FIX Fixed z-index issues with surveyjs dropdown

--- a/Facades/js/survey-js/openui5-survey.css
+++ b/Facades/js/survey-js/openui5-survey.css
@@ -25,6 +25,7 @@
 .sv_main .sv_container .sv_body .sv_p_root .sv_q .sv_q_other input, 
 .sv_main .sv_container .sv_body .sv_p_root .sv_q input:not([type="button"]):not([type="reset"]):not([type="submit"]):not([type="image"]):not([type="checkbox"]):not([type="radio"]), 
 .sv_main .sv_container .sv_body .sv_p_root .sv_q select, 
+.sv-popup-custom-container input,
 .sv_main .sv_container .sv_body .sv_p_root .sv_q textarea {
     padding: .1875rem .5rem !important;
     border: .0625rem solid #89919a;
@@ -51,6 +52,7 @@
 }
 .sv_main .sv_qstn .sv_q_file .sv_q_file_choose_button,
 .sv_main.sv_default_css input[type="button"], 
+.sv-popup-custom-container button,
 .sv_default_css button {
     height: calc(2rem - 3px);
     padding-top: 0 !important;
@@ -101,19 +103,52 @@
     }
     .sv-popup--overlay {height: calc(100%);position: fixed;top: 0;}
     .sv-popup__container {display: flex;align-items: center;}
-    .sv-popup__shadow {height: 500px;}
+    .sv-popup__shadow {height: auto; max-height: 500px; padding: 0 5px;}
     .sv-popup__body-footer.sv-action-bar {padding: 0 !important;}
-    .sv-action__content {justify-content: end;}
-    .sv_default_css .sv-popup__button {
+    .sv-action__content {display:flex; justify-content: end;}
+    .sv-popup__button {
         background-color: #0a6ed1!important;
         border-color: #0a6ed1!important;
         width: fit-content!important;
         color: white!important;
         font-family: "72","72full",Arial,Helvetica,sans-serif!important;
     }
-    .sv-popup__body-content {
-        border-radius: calc(2* var(--base-unit, 8px)) calc(2* var(--base-unit, 8px)) calc(2* var(--base-unit, 8px)) calc(2* var(--base-unit, 8px))!important;
+    .sv-popup__body-content { border-radius: 0.25rem !important; }
+    .sv-list__item.sv-list__item--focused .sv-list__item-body {background-color: rgb(229, 240, 250);}
+    .sv-list__filter {display: flex;}
+    .sv-list__filter-icon {
+        top: 0!important;
+        position: static;
+        width: 30px;
+        align-items: center;
+        display: flex;
     }
+    .sv_default_css .sv-list__filter-clear-button {
+        display: flex;
+        align-items: center;
+        position: absolute!important;
+        right: 0;
+        border: none !important;
+        background-color: transparent!important;
+    }
+    .sv-svg-icon {height: 20px;width: 20px;}
+}
+
+/* Dropdown overlay tablet */
+@media only screen and (min-width: 600px) and (max-width: 1024px) {
+    .sv-popup--overlay {height:100%;position: fixed;top: 0;}
+    .sv-popup__container {display: flex;align-items:center;}
+    .sv-popup__shadow {height: auto; max-height: 500px; padding: 0 5px;}
+    .sv-popup__body-footer.sv-action-bar {padding: 0 !important;}
+    .sv-action__content {display:flex; justify-content: end;}
+    .sv-popup__button {
+        background-color: #0a6ed1!important;
+        border-color: #0a6ed1!important;
+        width: fit-content!important;
+        color: white!important;
+        font-family: "72","72full",Arial,Helvetica,sans-serif!important;
+    }
+    .sv-popup__body-content { border-radius: 0.25rem!important; max-width: 600px!important; margin:auto; }
     .sv-list__item.sv-list__item--focused .sv-list__item-body {background-color: rgb(229, 240, 250);}
     .sv-list__filter {display: flex;}
     .sv-list__filter-icon {
